syntax = "proto3";

option java_package = "team.standalone.core.datastore.proto.model";
option java_multiple_files = true;

message SettingsProtoFile {
  string chatLanguage = 1;
}